--- a/styles/components/_main.scss
+++ b/styles/components/_main.scss
@@ -1,3 +1,4 @@
 @import "./homeBlogTypeSmall";
 @import "./homeBlogTypeMain";
 @import "./marketNewsTypeMain";
+@import "./marketNewsTypeSecondary";
