--- a/styles/components/_marketNewsTypeSecondary.scss
+++ b/styles/components/_marketNewsTypeSecondary.scss
@@ -1,29 +1,29 @@
-.marketNewsTypeMain {
+.marketNewsTypeSecondary {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   align-items: flex-start;
+  margin: 0px;
   padding: 0px;
   gap: 16px;
   width: 345px;
-  //   height: 388px;
-  height: fit-content;
+  height: 90px;
   transition: 0.4s all;
+  cursor: pointer;
 
   .imageContainer {
-    margin: 0px;
-    padding: 0px;
-    overflow: hidden;
+    width: 120px;
+    height: 100%;
+    background: #d9d9d9;
     border-radius: 6px;
-    width: 100%;
-    height: 180px;
   }
-
   .blogContents {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: flex-start;
     gap: 10px;
+    width: 209px;
+    height: fit-content;
 
     .blogCategoryTitle {
       display: flex;
@@ -65,63 +65,60 @@
       }
     }
 
-    .blogBody {
-      display: flex;
-      flex-direction: row;
-      justify-content: flex-start;
-      align-items: center;
-      p {
-        margin: 0px;
-        padding: 0px;
-        font-family: "Product Sans", sans-serif;
-        font-style: normal;
-        font-weight: 400;
-        font-size: 16px;
-        line-height: 140%;
-        color: #333333;
-        overflow: hidden;
-        text-overflow: ellipsis;
-        white-space: initial;
-        display: -webkit-box;
-        -webkit-line-clamp: 4;
-        -webkit-box-orient: vertical;
-      }
-    }
-
     .blogBy {
-      display: flex;
-      flex-direction: row;
-      align-items: center;
-      gap: 8px;
-
-      .author,
-      .posted {
-        font-family: "Product Sans", sans-serif;
-        font-style: normal;
-        font-weight: 400;
-        font-size: 14px;
-        line-height: 140%;
-        color: #4f4f4f;
-      }
-
-      .separator {
-        display: flex;
-        align-items: center;
-      }
+      display: none;
     }
   }
 }
 
-.marketNewsTypeMain:hover {
+.marketNewsTypeSecondary:hover {
   transform: scale(0.9);
 }
 
-@media only screen and (min-width: 992px) {
-  .marketNewsTypeMain {
+@media only screen and (min-width: 768px) {
+  .marketNewsTypeSecondary {
     width: 626.5px;
+    height: 133.33px;
 
     .imageContainer {
-      height: 300px;
+      width: 260px;
+      height: 133.33px;
+    }
+    .blogContents {
+      width: 350.5px;
+      height: fit-content;
+
+      .blogCategoryTitle {
+        p {
+        }
+      }
+      .blogHeader {
+        p {
+          font-size: 20px;
+        }
+      }
+
+      .blogBy {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        gap: 8px;
+
+        .author,
+        .posted {
+          font-family: "Product Sans", sans-serif;
+          font-style: normal;
+          font-weight: 400;
+          font-size: 14px;
+          line-height: 140%;
+          color: #4f4f4f;
+        }
+
+        .separator {
+          display: flex;
+          align-items: center;
+        }
+      }
     }
   }
 }
