--- a/styles/pages/_homePage.scss
+++ b/styles/pages/_homePage.scss
@@ -94,13 +94,16 @@
                 width: 100%;
                 display: flex;
                 flex-direction: row;
+                justify-content: flex-start;
+                gap: 10px;
                 overflow-x: scroll;
-                overflow-y: hidden;
+                overflow-y: scroll;
 
                 .blogPreviewDiv::-webkit-scrollbar-track {
                     /* -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);  */
                     -webkit-border-radius: 10px;
                     border-radius: 10px;
+                    display: none;
                 }
 
                 .blogPreviewDiv::-webkit-scrollbar-thumb {
@@ -116,7 +119,9 @@
                 }
 
                 .bigComponent {
-                    display: none;
+                    height: fit-content;
+                    width: fit-content;
+                    border: solid 1px;
                 }
 
                 .smallComponentDiv {
@@ -148,7 +153,7 @@
             gap: 8px;
             position: relative;
             width: 100%;
-            height: 766px;
+            height: fit-content;
             padding-right: 15px;
 
             .titleDiv {
@@ -183,7 +188,7 @@
                 .viewAllButton {
                     width: fit-content;
                     height: 22px;
-                    font-family: 'Product Sans',sans-serif;
+                    font-family: 'Product Sans', sans-serif;
                     font-style: normal;
                     font-weight: 400;
                     font-size: 16px;
@@ -192,6 +197,64 @@
                     flex: none;
                     order: 1;
                     flex-grow: 0;
+                }
+            }
+
+            .marketNewsContentDiv {
+                display: flex;
+                flex-direction: column;
+                align-items: flex-start;
+                padding: 0px;
+                gap: 24px;
+                width: 345px;
+                height: fit-content;
+                flex: none;
+                align-self: stretch;
+                flex-grow: 0;
+                border: solid 1px;
+            }
+
+            .marketBigComponent {
+                position: relative;
+                display: flex;
+                flex-direction: column;
+                align-items: flex-start;
+                padding: 0px;
+                gap: 16px;
+                width: 345px;
+                height: 388px;
+                flex: none;
+                align-self: stretch;
+                flex-grow: 0;
+                border: solid 1px;
+            }
+
+            .marketSmallComponentDiv {
+                display: flex;
+                flex-direction: column;
+                align-items: flex-start;
+                padding: 0px;
+                gap: 24px;
+                width: 345px;
+                height: fit-content;
+                flex: none;
+                align-self: stretch;
+                flex-grow: 0;
+                border: solid 1px;
+
+                .marketSmallComponent {
+                    display: flex;
+                    flex-direction: row;
+                    justify-content: center;
+                    align-items: flex-start;
+                    padding: 0px;
+                    gap: 16px;
+                    width: 345px;
+                    height: 90px;
+                    flex: none;
+                    align-self: stretch;
+                    flex-grow: 0;
+                    border: solid 1px;
                 }
             }
         }
