--- a/styles/pages/_homePage.scss
+++ b/styles/pages/_homePage.scss
@@ -116,7 +116,7 @@
                 }
 
                 .bigComponent {
-                    display: none;
+                    // display: none;
                 }
 
                 .smallComponentDiv {
