--- a/styles/components/_main.scss
+++ b/styles/components/_main.scss
@@ -2,3 +2,5 @@
 @import "./homeBlogTypeMain";
 @import "./marketNewsTypeMain";
 @import "./marketNewsTypeSecondary";
+@import "./blogBodyRightSidebar";
+@import "./relatedBlogs";
