blog by category page component completion with responsiveness in 375 and 1440 breakpoints

--- a/styles/components/_main.scss
+++ b/styles/components/_main.scss
@@ -2,5 +2,6 @@
 @import "./homeBlogTypeMain";
 @import "./marketNewsTypeMain";
 @import "./marketNewsTypeSecondary";
-@import "./blogBodyRightSidebar";
 @import "./relatedBlogs";
+@import "./featuredProperties";
+@import "./categorySpecificBlog";
