--- a/styles/components/_relatedBlogs.scss
+++ b/styles/components/_relatedBlogs.scss
@@ -1,11 +1,10 @@
 .relatedBlogs {
-  width: 345px;
+  width: 100%;
   height: fit-content;
   display: flex;
   flex-direction: row;
-  justify-content: center;
+  justify-content: space-between;
   align-items: flex-start;
-  padding: 0px;
   gap: 16px;
 
   .imageContainer {
