--- a/styles/layout/_blogBodyRightSidebar.scss
+++ b/styles/layout/_blogBodyRightSidebar.scss
@@ -2,7 +2,7 @@
   width: 375px;
   height: fit-content;
   margin: 0px;
-  padding: 32px 15px;
+  padding: 32px 0px;
   background: #ffffff;
   display: flex;
   flex-direction: column;
@@ -18,6 +18,7 @@
     gap: 8px;
     margin: 0px;
     padding: 0px;
+    width: 100%;
 
     .relatedSectionTitle {
       display: flex;
@@ -25,6 +26,7 @@
       justify-content: space-between;
       align-items: center;
       width: 100%;
+      padding: 0px;
 
       p {
         font-family: "Product Sans", sans-serif;
@@ -35,6 +37,8 @@
         color: #333333;
         margin: 0px;
         padding: 0px;
+        // width: 30px;
+        // border: solid 1px;
       }
       button {
         background: transparent;
@@ -50,6 +54,9 @@
         outline: none;
       }
     }
+    .relatedSectionContainer {
+      width: 100%;
+    }
   }
   .featuredSection {
     display: flex;
@@ -59,6 +66,7 @@
     gap: 8px;
     margin: 0px;
     padding: 0px;
+    width: 100%;
 
     .featuredSectionTitle {
       display: flex;
@@ -66,6 +74,7 @@
       justify-content: space-between;
       align-items: center;
       width: 100%;
+      padding: 0px;
 
       p {
         font-family: "Product Sans", sans-serif;
@@ -76,6 +85,7 @@
         color: #333333;
         margin: 0px;
         padding: 0px;
+        // border: solid 1px;
       }
       button {
         background: transparent;
@@ -89,6 +99,39 @@
         margin: 0px;
         padding: 0px;
         outline: none;
+      }
+    }
+    .featuredSectionContainer {
+      width: 100%;
+    }
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .rightSidebar {
+    width: 490px;
+    padding-right: 72.5px;
+
+    .relatedSection {
+      width: 410px;
+      .relatedSectionTitle {
+        p {
+        }
+        button {
+        }
+      }
+      .relatedSectionContainer {
+      }
+    }
+    .featuredSection {
+      width: 410px;
+      .featuredSectionTitle {
+        p {
+        }
+        button {
+        }
+      }
+      .featuredSectionContainer {
       }
     }
   }
