--- a/styles/components/_featuredProperties.scss
+++ b/styles/components/_featuredProperties.scss
@@ -4,17 +4,19 @@
   height: fit-content;
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
   align-items: flex-start;
   padding: 0px;
-  gap: 16px;
+  gap: 12px;
 
   .imageContainer {
-    position: relative;
     width: 120px;
     height: 102px;
-    background: #d9d9d9;
-    border-radius: 6px;
+    border-radius: 3px;
+
+    img {
+      border-radius: inherit;
+      object-fit: contain;
+    }
   }
 
   .contentContainer {
