--- a/styles/globals.css
+++ b/styles/globals.css
@@ -20,8 +20,9 @@ a {
     color-scheme: dark;
   }
   body {
-    color: white;
+    /* color: white; */
     /* background: black; */
+    color: black;
     background: #ffffff;
   }
 }
