--- a/styles/layout/_blogBodyRightSidebar.scss
+++ b/styles/layout/_blogBodyRightSidebar.scss
@@ -56,6 +56,9 @@
     }
     .relatedSectionContainer {
       width: 100%;
+      display: flex;
+      flex-direction: column;
+      gap: 24px;
     }
   }
   .featuredSection {
@@ -63,7 +66,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    gap: 8px;
+    gap: 16px;
     margin: 0px;
     padding: 0px;
     width: 100%;
