--- a/styles/layout/_blogNavbar.scss
+++ b/styles/layout/_blogNavbar.scss
@@ -84,7 +84,7 @@ select:focus {
           }
         }
         .expandedNavItems {
-          display: none;
+          display: flex;
         }
       }
     }
@@ -166,7 +166,7 @@ select:focus {
     }
   }
 
-  @media only screen and (min-width: 768px) {
+  @media only screen and (min-width: 1024px) {
     .navbarContainer {
       flex-direction: row;
     }
