--- a/styles/components/_homeBlogTypeMain.scss
+++ b/styles/components/_homeBlogTypeMain.scss
@@ -4,6 +4,7 @@
   justify-content: flex-end;
   align-items: center;
   gap: 10px;
+  min-width: 250px;
   width: 100%;
   height: 250px;
   background: linear-gradient(
@@ -17,6 +18,7 @@
   padding: 0px;
   transition: 0.4s all;
   position: relative;
+  // border: solid 2px red;
 
   .thumbnail {
     display: flex;
@@ -187,7 +189,7 @@
 
 @media only screen and (min-width: 1024px) {
   .homeBlogTypeMain {
-    width: 637.5px;
+    width: 100%;
     height: 500px;
 
     .thumbnail {
