--- a/styles/layout/_blogBodyRightSidebar.scss
+++ b/styles/layout/_blogBodyRightSidebar.scss
@@ -1,8 +1,8 @@
 .rightSidebar {
-  width: 375px;
+  width: 100%;
   height: fit-content;
   margin: 0px;
-  padding: 32px 0px;
+  padding: 0px;
   background: #ffffff;
   display: flex;
   flex-direction: column;
@@ -116,7 +116,7 @@
     padding-right: 72.5px;
 
     .relatedSection {
-      width: 410px;
+      width: 100%;
       .relatedSectionTitle {
         p {
         }
@@ -127,7 +127,7 @@
       }
     }
     .featuredSection {
-      width: 410px;
+      width: 100%;
       .featuredSectionTitle {
         p {
         }
