--- a/styles/pages/_homePage.scss
+++ b/styles/pages/_homePage.scss
@@ -31,10 +31,10 @@
     align-items: center;
     min-width: 100vw;
     height: fit-content;
-    background-color: aquamarine;
+    background-color: lightgray;
 
     .secNavBlend {
-      height: 75.5px;
+      height: 105.5px;
       width: 100%;
       background-color: #001338;
       position: absolute;
@@ -113,6 +113,8 @@
         height: fit-content;
         width: 100%;
         position: sticky;
+        padding: 12px 15px 18px 15px;
+        background-color: #001338;
         // border: solid 1px;
       }
 
@@ -1008,15 +1010,8 @@
       align-items: center;
       min-width: 100vw;
       height: fit-content;
-      background-color: aquamarine;
+      background-color: lightgray;
 
-      .secNavBlend {
-        height: 75.5px;
-        width: 100%;
-        background-color: #001338;
-        position: absolute;
-        top: 98px;
-      }
 
       .footerBlend {
         position: absolute;
@@ -1091,6 +1086,8 @@
           height: fit-content;
           width: 100%;
           position: sticky;
+          padding: 12px 15px 18px 15px;
+          background-color: #001338;
           // border: solid 1px;
         }
 
@@ -1979,7 +1976,7 @@
       // overflow-x:hidden;
 
       .secNavBlend {
-        height: 72px;
+        height: 74px;
         width: 100%;
         background-color: #001338;
         position: absolute;
@@ -2073,13 +2070,14 @@
             top: 83px;
             background: #d9d9d9;
           }
-
-          .secNavDiv {
-            height: fit-content;
-            width: 100%;
-            position: sticky;
-            // border: solid 1px;
-          }
+        }
+        .secNavDiv {
+          height: fit-content;
+          width: 100%;
+          position: sticky;
+          padding: 16px 5.5% 16px 5.5%;
+          background-color: #001338;
+          border: solid 1px white;
         }
 
         .contentBody {
@@ -2099,12 +2097,11 @@
             flex-direction: row;
             justify-content: flex-start;
             gap: 5px;
-            overflow-x: hidden;
-            overflow-y: hidden;
+            overflow: visible;
 
             .bigComponent {
               height: fit-content;
-              width: fit-content;
+              width: calc(637.5 * 100% / 1280);
               min-width: calc(637.5 * 100% / 1280);
               min-height: 100%;
               border: solid 1px;
@@ -2119,12 +2116,12 @@
               width: fit-content;
               min-width: calc(637.5 * 100% / 1280);
               min-height: 100%;
+              overflow: visible;
               // border: solid 1px red;
 
               .smallComponent {
                 height: 250px;
-                width: fit-content;
-                min-width: calc(316 * 100% / 637.5);
+                width: calc(316 * 100% / 637.5);
                 min-height: calc(637.5 * 100% / 1280);
                 // border: solid 1px;
               }
