--- a/styles/pages/_blogDetails.scss
+++ b/styles/pages/_blogDetails.scss
@@ -1,4 +1,4 @@
-.alignmentContainer {
+.blogAlignmentContainer {
   min-height: 100vh;
   height: 100%;
   padding-bottom: 55px;
@@ -30,7 +30,7 @@
     align-items: center;
     min-width: 100vw;
     height: fit-content;
-    background-color: #D9D9D9;
+    background-color: #d9d9d9;
 
     .secNavBlend {
       height: 75px;
@@ -62,7 +62,7 @@
         position: sticky;
       }
 
-      .bodyContainer {
+      .bodyDetailsContainer {
         width: 100%;
         margin: 0px;
         padding: 0px;
@@ -81,7 +81,7 @@
             display: flex;
             flex-direction: column;
             gap: 24px;
-            width: 100%;
+            width: 100;
 
             .leftHeaderSection {
               display: flex;
@@ -109,6 +109,15 @@
                   color: #4f4f4f;
                   margin: 0px;
                   padding: 0px;
+
+                  .catAndSubCat {
+                    display: flex;
+                    flex-direction: row;
+                    flex-wrap: wrap;
+                    align-items: center;
+                    justify-content: center;
+                    gap: 10px;
+                  }
                 }
 
                 .categoryTitle {
@@ -124,76 +133,12 @@
                   padding: 0px;
                 }
               }
-
-              .sortSection {
-                display: flex;
-                flex-direction: row;
-                justify-content: space-evenly;
-                gap: 4px;
-                align-items: center;
-                padding-right: 20px;
-                width: fit-content;
-                height: fit-content;
-                margin: 0px;
-                padding: 0px;
-
-                .sortTitle {
-                  font-family: "Product Sans", sans-serif;
-                  font-style: normal;
-                  font-weight: 700;
-                  font-size: 16px;
-                  line-height: 140%;
-                  color: #4f4f4f;
-                  word-spacing: 3px;
-                }
-
-                .sortButton {
-                  display: flex;
-                  position: relative;
-                  flex-direction: row;
-                  justify-content: center;
-                  align-items: center;
-                  text-align: center;
-                  color: #4f4f4f;
-                  width: fit-content;
-
-                  .subCategorySelect {
-                    font-family: "Product Sans", sans-serif;
-                    font-style: normal;
-                    font-weight: 400;
-                    font-size: 16px;
-                    line-height: 140%;
-                    text-align: center;
-                    color: #4f4f4f;
-                    height: 22px;
-                    width: 100%;
-                    appearance: none;
-                    border: none;
-                    background-color: transparent;
-                    z-index: 2;
-
-                    .option {
-                      width: 137px;
-                      text-align: center;
-                    }
-                  }
-
-                  .subCategorySelect:focus {
-                    outline: none;
-                  }
-
-                  .selectArrow {
-                    position: absolute;
-                    right: 0;
-                    z-index: -1;
-                  }
-                }
-              }
             }
 
             .componentMapSection {
               height: fit-content;
               width: 100%;
+              // display: none;
             }
 
             .paginationSection {
@@ -220,7 +165,7 @@
               position: relative;
               width: 100%;
               height: 223px;
-              background-color: #D9D9D9;
+              background-color: #d9d9d9;
               z-index: 0;
             }
 
@@ -236,44 +181,49 @@
         width: 100%;
         min-height: none;
         height: 1015px;
-        background: #4F4F4F;
+        background: #4f4f4f;
       }
     }
   }
 }
 
-
-
-
 @media screen and (min-width: 1024px) {
-
-  .alignmentContainer {
+  .blogAlignmentContainer {
+    min-height: 100vh;
     height: 100%;
-    padding: 0px;
-    padding-bottom: 69px;
+    padding-bottom: 55px;
     width: 100%;
-    background: #ffffff;
+    background-color: ghostwhite;
     color: #333333;
     display: flex;
     flex-direction: column;
     align-items: center;
+    position: relative;
     overflow: hidden;
 
     .navBlend {
-      width: 100%;
+      width: 100vw;
       position: fixed;
-      top: 0px;
-      height: 67px;
+      height: 53px;
       background: #ffffff;
+      box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.05);
+      z-index: 3;
     }
 
     .containerDiv {
       position: relative;
+      display: flex;
+      flex-direction: column;
+      position: relative;
+      top: 53px;
       width: 100%;
-      top: 67px;
+      align-items: center;
+      min-width: 100vw;
+      height: fit-content;
+      background-color: #d9d9d9;
 
       .secNavBlend {
-        height: 72px;
+        height: 75px;
         width: 100%;
         background-color: #001338;
         position: absolute;
@@ -283,20 +233,18 @@
       .footerBlend {
         position: absolute;
         width: 100%;
-        height: 474px;
+        height: 1015px;
         background: #4f4f4f;
         bottom: 0px;
       }
 
       .contentDiv {
         height: fit-content;
-        width: 100%;
-        max-width: 1440px;
+        width: 375px;
         display: flex;
         flex-direction: column;
         background-color: #ffffff;
         position: relative;
-        box-shadow: none;
 
         .secNavDiv {
           height: fit-content;
@@ -304,74 +252,116 @@
           position: sticky;
         }
 
-        .bodyContainer {
-          padding: 24px 5.5% 40px 5.5%;
+        .bodyDetailsContainer {
           width: 100%;
+          margin: 0px;
+          padding: 0px;
+          position: relative;
+          padding: 24px 15px 32px 15px;
 
           .categoryBlogBody {
-            flex-direction: row;
-            justify-content: center;
-            gap: calc(40*100%/1280);
-            align-items: flex-start;
             width: 100%;
+            height: fit-content;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            gap: 32px;
 
             .leftBodySection {
-              width: calc(830*100%/1280);
+              display: flex;
+              flex-direction: column;
+              gap: 24px;
+              width: 100;
 
               .leftHeaderSection {
-                flex-direction: row;
-                justify-content: space-between;
+                display: flex;
+                flex-direction: column;
+                justify-content: center;
                 align-items: flex-start;
-                position: relative;
+                gap: 16px;
 
                 .categoryHeader {
-                  .categoryInfo {}
+                  display: flex;
+                  width: fit-content;
+                  flex-direction: column;
+                  align-items: flex-start;
+                  justify-content: center;
+                  gap: 8px;
 
-                  .categoryTitle {}
-                }
+                  .categoryInfo {
+                    height: fit-content;
+                    width: fit-content;
+                    font-family: "Product Sans", sans-serif;
+                    font-style: normal;
+                    font-weight: 400;
+                    font-size: 16px;
+                    line-height: 140%;
+                    color: #4f4f4f;
+                    margin: 0px;
+                    padding: 0px;
 
-                .sortSection {
-                  position: absolute;
-                  top: 42px;
-                  right: 0px;
-
-                  .sortTitle {}
-
-                  .sortButton {
-                    .subCategorySelect {
-                      .option {}
+                    .catAndSubCat {
+                      display: flex;
+                      flex-direction: row;
+                      flex-wrap: wrap;
+                      align-items: center;
+                      justify-content: center;
+                      gap: 10px;
                     }
+                  }
 
-                    .subCategorySelect:focus {}
-
-                    .selectArrow {}
+                  .categoryTitle {
+                    height: fit-content;
+                    width: fit-content;
+                    font-family: "Product Sans", sans-serif;
+                    font-style: normal;
+                    font-weight: 700;
+                    font-size: 24px;
+                    line-height: 140%;
+                    color: #0000ff;
+                    margin: 0px;
+                    padding: 0px;
                   }
                 }
               }
 
-              .componentMapSection {}
+              .componentMapSection {
+                height: fit-content;
+                width: 100%;
+                // display: none;
+              }
+
+              .paginationSection {
+                .pageNumberArea {
+                  display: flex;
+                  flex-direction: row;
+                  justify-content: center;
+                  align-items: center;
+                  gap: 8px;
+                  margin: 0px;
+                }
+              }
             }
 
             .rightBodySection {
-              gap: 41px;
-              padding: 0px;
-              margin: 0px;
-              width: calc(410*100%/1280);
+              width: 100%;
               height: fit-content;
-              overflow: hidden;
+              display: flex;
+              flex-direction: column;
+              align-items: flex-start;
+              gap: 32px;
 
               .blogAdDiv {
-                display: block;
                 position: relative;
                 width: 100%;
-                height: 279px;
-                background-color: #D9D9D9;
+                height: 223px;
+                background-color: #d9d9d9;
                 z-index: 0;
               }
 
               .rightSidebar {
-                width: 100%;
                 padding: 0px;
+                width: 100%;
               }
             }
           }
@@ -379,23 +369,11 @@
 
         .footer {
           width: 100%;
-          min-height: 474px;
-          height: fit-content;
-          background: #4F4F4F;
+          min-height: none;
+          height: 1015px;
+          background: #4f4f4f;
         }
       }
     }
-  }
-
-
-}
-
-.blogDetailsBodySection{
-  // display: none !important;
-
-  figure{
-    // display: none !important;
-    width: 830px !important;
-height: 550px !important;
   }
 }
