--- a/styles/pages/_blogDetails.scss
+++ b/styles/pages/_blogDetails.scss
@@ -20,8 +20,7 @@
     z-index: 3;
   }
 
-  .containerDiv {
-    position: relative;
+  .blogContainerDiv {
     display: flex;
     flex-direction: column;
     position: relative;
@@ -32,8 +31,8 @@
     height: fit-content;
     background-color: #d9d9d9;
 
-    .secNavBlend {
-      height: 75px;
+    .blogSecNavBlend {
+      height: 105.5px;
       width: 100%;
       background-color: #001338;
       position: absolute;
@@ -50,7 +49,9 @@
 
     .contentDiv {
       height: fit-content;
-      width: 375px;
+      width: 100%;
+      min-width: 345px;
+      max-width: 890px;
       display: flex;
       flex-direction: column;
       background-color: #ffffff;
@@ -60,6 +61,12 @@
         height: fit-content;
         width: 100%;
         position: sticky;
+        padding: 12px 15px 18px 15px;
+        background-color: #001338;
+
+        @media screen and (min-width: 768px) {
+          padding: 12px 30px 18px 30px;
+        }
       }
 
       .bodyDetailsContainer {
@@ -68,6 +75,10 @@
         padding: 0px;
         position: relative;
         padding: 24px 15px 32px 15px;
+
+        @media screen and (min-width: 768px) {
+          padding: 24px 30px 32px 30px;
+        }
 
         .categoryBlogBody {
           width: 100%;
@@ -81,7 +92,7 @@
             display: flex;
             flex-direction: column;
             gap: 24px;
-            width: 100;
+            width: 100%;
 
             .leftHeaderSection {
               display: flex;
@@ -109,15 +120,6 @@
                   color: #4f4f4f;
                   margin: 0px;
                   padding: 0px;
-
-                  .catAndSubCat {
-                    display: flex;
-                    flex-direction: row;
-                    flex-wrap: wrap;
-                    align-items: center;
-                    justify-content: center;
-                    gap: 10px;
-                  }
                 }
 
                 .categoryTitle {
@@ -138,7 +140,9 @@
             .componentMapSection {
               height: fit-content;
               width: 100%;
-              // display: none;
+              display: flex;
+              flex-direction: column;
+              gap: 22px;
             }
 
             .paginationSection {
@@ -188,42 +192,33 @@
 }
 
 @media screen and (min-width: 1024px) {
-  .blogAlignmentContainer {
-    min-height: 100vh;
+  .alignmentContainer {
     height: 100%;
-    padding-bottom: 55px;
+    padding: 0px;
+    padding-bottom: 69px;
     width: 100%;
-    background-color: ghostwhite;
+    background: #ffffff;
     color: #333333;
     display: flex;
     flex-direction: column;
     align-items: center;
-    position: relative;
     overflow: hidden;
 
     .navBlend {
-      width: 100vw;
+      width: 100%;
       position: fixed;
-      height: 53px;
+      top: 0px;
+      height: 67px;
       background: #ffffff;
-      box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.05);
-      z-index: 3;
     }
 
-    .containerDiv {
+    .blogContainerDiv {
       position: relative;
-      display: flex;
-      flex-direction: column;
-      position: relative;
-      top: 53px;
       width: 100%;
-      align-items: center;
-      min-width: 100vw;
-      height: fit-content;
-      background-color: #d9d9d9;
+      top: 67px;
 
-      .secNavBlend {
-        height: 75px;
+      .blogSecNavBlend {
+        height: 71px;
         width: 100%;
         background-color: #001338;
         position: absolute;
@@ -233,135 +228,105 @@
       .footerBlend {
         position: absolute;
         width: 100%;
-        height: 1015px;
+        height: 474px;
         background: #4f4f4f;
         bottom: 0px;
       }
 
       .contentDiv {
         height: fit-content;
-        width: 375px;
+        width: 100%;
+        max-width: 1440px;
         display: flex;
         flex-direction: column;
         background-color: #ffffff;
         position: relative;
+        box-shadow: none;
 
         .secNavDiv {
           height: fit-content;
           width: 100%;
           position: sticky;
+          padding: 12px 5.5% 18px 5.5%;
         }
 
-        .bodyDetailsContainer {
+        .bodyContainer {
+          padding: 24px 5.5% 40px 5.5%;
           width: 100%;
-          margin: 0px;
-          padding: 0px;
-          position: relative;
-          padding: 24px 15px 32px 15px;
+          border: solid 1px;
 
           .categoryBlogBody {
+            flex-direction: row;
+            justify-content: center;
+            gap: calc(40 * 100% / 1280);
+            align-items: flex-start;
             width: 100%;
-            height: fit-content;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            gap: 32px;
 
             .leftBodySection {
-              display: flex;
-              flex-direction: column;
-              gap: 24px;
-              width: 100;
+              width: calc(830 * 100% / 1280);
 
               .leftHeaderSection {
-                display: flex;
-                flex-direction: column;
-                justify-content: center;
+                flex-direction: row;
+                justify-content: space-between;
                 align-items: flex-start;
-                gap: 16px;
+                position: relative;
 
                 .categoryHeader {
-                  display: flex;
-                  width: fit-content;
-                  flex-direction: column;
-                  align-items: flex-start;
-                  justify-content: center;
-                  gap: 8px;
-
                   .categoryInfo {
-                    height: fit-content;
-                    width: fit-content;
-                    font-family: "Product Sans", sans-serif;
-                    font-style: normal;
-                    font-weight: 400;
-                    font-size: 16px;
-                    line-height: 140%;
-                    color: #4f4f4f;
-                    margin: 0px;
-                    padding: 0px;
-
-                    .catAndSubCat {
-                      display: flex;
-                      flex-direction: row;
-                      flex-wrap: wrap;
-                      align-items: center;
-                      justify-content: center;
-                      gap: 10px;
-                    }
                   }
 
                   .categoryTitle {
-                    height: fit-content;
-                    width: fit-content;
-                    font-family: "Product Sans", sans-serif;
-                    font-style: normal;
-                    font-weight: 700;
-                    font-size: 24px;
-                    line-height: 140%;
-                    color: #0000ff;
-                    margin: 0px;
-                    padding: 0px;
+                  }
+                }
+
+                .sortSection {
+                  position: absolute;
+                  top: 42px;
+                  right: 0px;
+
+                  .sortTitle {
+                  }
+
+                  .sortButton {
+                    .subCategorySelect {
+                      .option {
+                      }
+                    }
+
+                    .subCategorySelect:focus {
+                    }
+
+                    .selectArrow {
+                    }
                   }
                 }
               }
 
               .componentMapSection {
-                height: fit-content;
-                width: 100%;
-                // display: none;
-              }
-
-              .paginationSection {
-                .pageNumberArea {
-                  display: flex;
-                  flex-direction: row;
-                  justify-content: center;
-                  align-items: center;
-                  gap: 8px;
-                  margin: 0px;
-                }
+                gap: 24px;
               }
             }
 
             .rightBodySection {
-              width: 100%;
+              gap: 41px;
+              padding: 0px;
+              margin: 0px;
+              width: calc(410 * 100% / 1280);
               height: fit-content;
-              display: flex;
-              flex-direction: column;
-              align-items: flex-start;
-              gap: 32px;
+              overflow: hidden;
 
               .blogAdDiv {
+                display: block;
                 position: relative;
                 width: 100%;
-                height: 223px;
+                height: 279px;
                 background-color: #d9d9d9;
                 z-index: 0;
               }
 
               .rightSidebar {
-                padding: 0px;
                 width: 100%;
+                padding: 0px;
               }
             }
           }
@@ -369,8 +334,8 @@
 
         .footer {
           width: 100%;
-          min-height: none;
-          height: 1015px;
+          min-height: 474px;
+          height: fit-content;
           background: #4f4f4f;
         }
       }
