--- a/styles/components/_marketNewsTypeMain.scss
+++ b/styles/components/_marketNewsTypeMain.scss
@@ -4,8 +4,8 @@
   align-items: flex-start;
   padding: 0px;
   gap: 16px;
-  width: 345px;
-  //   height: 388px;
+  width: 100%;
+  min-height: 388px;
   height: fit-content;
   transition: 0.4s all;
 
@@ -116,9 +116,10 @@
   transform: scale(0.9);
 }
 
-@media only screen and (min-width: 992px) {
+@media only screen and (min-width: 1024px) {
   .marketNewsTypeMain {
-    width: 626.5px;
+    width: 100%;
+    height: 100%;
 
     .imageContainer {
       height: 300px;
