--- a/styles/components/_marketNewsTypeSecondary.scss
+++ b/styles/components/_marketNewsTypeSecondary.scss
@@ -5,8 +5,8 @@
   margin: 0px;
   padding: 0px;
   gap: 16px;
-  width: 345px;
-  height: 90px;
+  width: 100%;
+  height: 100%;
   transition: 0.4s all;
   cursor: pointer;
 
@@ -23,7 +23,7 @@
     align-items: flex-start;
     gap: 10px;
     width: 209px;
-    height: fit-content;
+    height: 100%;
 
     .blogCategoryTitle {
       display: flex;
@@ -49,12 +49,12 @@
       align-items: center;
       p {
         margin: 0px;
-        padding: 0px;
+        padding-top:2px;
         font-family: "Product Sans", sans-serif;
         font-style: normal;
         font-weight: 700;
         font-size: 16px;
-        line-height: 140%;
+        line-height: 145%;
         color: #333333;
         overflow: hidden;
         text-overflow: ellipsis;
@@ -75,9 +75,9 @@
   transform: scale(0.9);
 }
 
-@media only screen and (min-width: 768px) {
+@media only screen and (min-width: 1024px) {
   .marketNewsTypeSecondary {
-    width: 626.5px;
+    width: 100%;
     height: 133.33px;
 
     .imageContainer {
@@ -85,8 +85,8 @@
       height: 133.33px;
     }
     .blogContents {
-      width: 350.5px;
-      height: fit-content;
+      width: 100%;
+      height: 100%;
 
       .blogCategoryTitle {
         p {
