--- a/styles/pages/_homePage.scss
+++ b/styles/pages/_homePage.scss
@@ -274,12 +274,12 @@
             align-items: flex-start;
             padding: 0px;
             gap: 24px;
-            width: 345px;
-            height: fit-content;
+            width: 100%;
+            height: 345px;
+            // height: fit-content;
             flex: none;
             align-self: stretch;
             flex-grow: 0;
-            border: solid 1px green;
 
             .marketSmallComponent {
               display: flex;
@@ -289,14 +289,13 @@
               padding: 0px;
               gap: 16px;
               width: 100%;
-              // height: 90px;
-              // min-height: 20px;
-              height: fit-content;
+              // min-height: 90px;
+              // min-height: 133.33px;
+              height: 29%;
               flex: none;
               align-self: stretch;
               flex-grow: 0;
-              border: solid 1px blue;
-            }
+            } 
           }
         }
 
@@ -1227,7 +1226,7 @@
               gap: 16px;
               width: 49%;
               height: fit-content;
-              min-height: 448px;
+              min-height: 388px;
               flex: none;
               align-self: stretch;
               flex-grow: 0;
@@ -1241,8 +1240,8 @@
               padding: 0px;
               gap: 24px;
               width: 49%;
-              min-height: 448px;
-              height: fit-content;
+              height: 388px;
+              // height: fit-content;
               flex: none;
               align-self: stretch;
               flex-grow: 0;
@@ -1256,9 +1255,9 @@
                 padding: 0px;
                 gap: 16px;
                 width: 100%;
-                // height: 90px;
-                min-height: 133.33px;
-                height: fit-content;
+                // min-height: 90px;
+                // min-height: 133.33px;
+                height: 29%;
                 flex: none;
                 align-self: stretch;
                 flex-grow: 0;
